--- a/add/src/Components/Navbar.css
+++ b/add/src/Components/Navbar.css
@@ -1,4 +1,10 @@
-.headerTop,.headerNav{
+.bod{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.headerNav{
     
     /* border: 1px solid rgb(36, 35, 35); */
     /* height: 100px; */
@@ -9,7 +15,7 @@
     /* border: 1px solid red; */
     display: flex;
     flex-direction: column;
-    width: 100%;
+    /* width: 100%; */
     align-items: center;
     justify-content: space-between;
     margin: auto;
@@ -18,7 +24,8 @@
 .headerTop{
     width: 80%;
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: space-around;
     align-items: center;
     
 }
@@ -39,10 +46,13 @@
 #logo +h2{
     font-size: 2rem;
 }
+ .tom{
+    color: rgb(239, 70, 41);
+}
 
 .headerMid,.headerEnd{
     display: flex;
-    /* border: 1px solid gray; */
+    /* border: 1px solid blue; */
     justify-content: space-between;
     align-items: center;
     
@@ -92,6 +102,7 @@
     align-items: center;
     padding: 0 1.5rem;
     color: #fff;
+    margin: auto;
 }
 .headerNav{
     background-color: #2bb673;
@@ -101,3 +112,5 @@
     text-decoration: none;
     color: #fff;
 }
+
+
