--- a/add/src/Pages/styles/Home.module.css
+++ b/add/src/Pages/styles/Home.module.css
@@ -19,7 +19,7 @@
 .comp{
 
     /* border: 1px solid blue; */
-    /* width: 100%; */
+    width: 150px;
     
 }
 
@@ -27,20 +27,21 @@
     /* background-color: red; */
 /* border: 1px solid red; */
 display: flex;
-justify-content: space-between;
+justify-content: space-around;
 align-items: center;
+flex-wrap: wrap;
 width: 97%;
 
 }
 
 #mainComp{
    
-    width: 95%;
+    width: 96%;
     margin: auto;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    gap: 1.5rem;
+    gap: 0.5rem;
    padding-bottom: 1.5rem;
 }
 .imgCard{
@@ -48,12 +49,12 @@ width: 97%;
     height: 180px;
 }
 .strong{
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: gray;
     margin-left: 1.5rem;
 }
 .lk{
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   color: skyblue;
   text-decoration: none;
 }
@@ -94,16 +95,17 @@ width: 97%;
 
     /* height: 100px; */
     display: flex;
-    justify-content: space-between;
-    gap: 1.5rem;
-    width: 80%;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    width: 100%;
     margin: auto;
 
 }
 .cardItem{
     /* border: 1px solid green; */
     /* height: 80px; */
-    width: 100%;
+    width: 200px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     border-radius: 0.5rem;
     padding:  0.5rem ;
@@ -153,7 +155,7 @@ width: 97%;
 }
 
 .featuredOn{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     /* height: 200px; */
     margin-top: 3rem;
 }
