--- a/add/src/Pages/styles/Recipes.module.css
+++ b/add/src/Pages/styles/Recipes.module.css
@@ -1,12 +1,15 @@
 .CardParent {
   display: flex;
-  gap: 20px;
+  gap: 0.3rem;
   width: 90%;
   justify-content: center;
+  margin: auto;
+  flex-wrap: wrap;
+  margin-bottom: 1.5rem;
 }
 
 .cards {
-    width: 90%;
+    width: 80%;
   display: flex;
   margin: auto;
   gap: 2rem;
@@ -39,8 +42,11 @@ border-radius: 50%;
 
 .searchContainer {
   display: flex;
-  gap: 20px;
+  gap: 0.3rem;
   flex-wrap: wrap;
+  padding: 0.5rem;
+  margin-bottom: 1.5rem;
+  border-bottom: 1px solid gray;
   justify-content: space-evenly;
 }
 .vBtn{
@@ -50,7 +56,9 @@ border-radius: 50%;
     padding: 0.5rem 1.5rem;
     border-radius: 0.4rem;
 }
-
+.vBtn:hover{
+    cursor: pointer;
+}
 .midImg{
     width: 100%;
     height: 200px;
@@ -64,4 +72,7 @@ border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.searchBox{
+  border:"1px solid red"
 }
