--- a/add/src/Pages/styles/Home.module.css
+++ b/add/src/Pages/styles/Home.module.css
@@ -182,3 +182,36 @@ width: 97%;
     background-color: #a49f9f29;
     padding: 1rem;
 }
+.carousel{
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    /* height: 40rem; */
+    width: 80%;
+    margin: auto;
+}
+.innerCarousel{
+    /* border: 1px solid black; */
+
+    width: 100%;
+    margin: auto;
+    margin-bottom: 2rem;
+}
+.Carousel{
+        width: 100%;
+        /* padding: 10px; */
+        margin: 5px 0px 0px 0px;
+        /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
+    }
+    .images {
+        position: relative;
+        /* width: 100%; */
+    }
+    .image {
+        cursor: pointer;
+        opacity: 0.7;
+        transition: .5s;
+        /* width: 10%; */
+        height: 96px;
+    }
+    .image:hover{
+      opacity: 1;
+    }
